.env, config.yaml and ttl files in /data removed from .gitignore to enable collaboration

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ typings/
 *.tgz
 
 # dotenv environment variables file
-.env
+# .env shared to enable parameter usage
 
 # gatsby files
 .cache/
@@ -74,4 +74,4 @@ cypress/screenshots/
 cypress/videos/
 
 # User Config
-config.yaml
+# config.yaml # shared to enable configuration usage
